--- a/zkingblog/views/users/reg.ejs
+++ b/zkingblog/views/users/reg.ejs
@@ -20,7 +20,7 @@
                 <div class="input-group-addon">
                     <span class="glyphicon glyphicon-envelope"></span>
                 </div>
-                <input type="text" name="email"
+                <input type="email" name="email"
                        id="email" class="form-control"/>
             </div>
         </div>
