--- a/zkingblog/views/include/header.ejs
+++ b/zkingblog/views/include/header.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title><%= title %></title>
+    <title><%=title %></title>
     <meta name="viewport" content="width=device-width,user-scalable=no"/>
     <link rel="shortcut icon" type="image/x-icon" href="/images/title.png" />
     <link rel="stylesheet" href="/lib/bootstrap/dist/css/bootstrap.css"/>
@@ -35,8 +35,15 @@
                 </li>
                 <%}%>
             </ul>
+            <form action="/articles/list/1/2" class="navbar-form navbar-left" method="post">
+                <div class="form-group">
+                    <input type="text" class="form-control" name="keyword" value="<%=keyword%>" placeholder="搜索"/>
+                </div>
+                <input type="submit" class="btn btn-default" name="searchBtn" value="搜索"/>
+            </form>
         </div>
     </nav>
+
 
     <div class="container text-center">
         <% if (success) { %>
